# qml-niri

./: CMakeLists.txt  README.md
src/: icon.cpp  icon.h  ipcclient.cpp  logging.cpp  logging.h  niri.cpp  niri.h  windowmodel.cpp  windowmodel.h  workspacemodel.cpp  workspacemodel.h
